--- a/templates_old/todo/item.html
+++ b/templates_old/todo/item.html
@@ -1,4 +1,7 @@
-<li class="uk-flex uk-flex-between">
+
+
+
+<div class="uk-flex uk-flex-between {{ todo.status }}">
     <p hx-swap="outerHTML" hx-get="/edit/{{ todo.id }}"><span uk-icon="file-edit"></span> {{ todo.content }} <b>{{todo.status}}</b></p>
     <button class="uk-icon-button" uk-icon="icon: close" hx-delete="/delete/{{ todo.id }}"></button>
-</li>
+</div>
